gke-deployment-scripts/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kloudafrica-ingress
  labels:
    name: kloudafrica-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
